[package]
name = "ck-meow"
description = "An implementation of STROBE using KitTen"
license-file = "LICENSE"
repository = "https://github.com/cronokirby/meow"
version = "0.1.0"
edition = "2021"


[dependencies]
keccak = "0.1.2"
subtle = "2.4.1"
zeroize = { version = "1.5.7", features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"